--- a/src/main/webapp/inward/inward_cancel_bill_final.xhtml
+++ b/src/main/webapp/inward/inward_cancel_bill_final.xhtml
@@ -94,7 +94,7 @@
                                                     <f:convertDateTime pattern="hh mm ss a"/>
                                                 </h:outputLabel>
 
-                                                <h:outputLabel value="#{inwardSearch.bill.patient.person.nameWithTitle}" style="position:absolute;left:4.5cm; top:2.5cm; text-transform: capitalize; "  />
+                                                <h:outputLabel value="#{inwardSearch.bill.patient.person.nameWithTitle}" style="position:absolute;left:4.5cm; top:2.5cm; text-transform: uppercase; "  />
 
                                                 <h:outputLabel value="#{inwardSearch.bill.patient.person.phone}" style="position: absolute;left:4.5cm; top:3.0cm;"  />
 
