--- a/src/main/webapp/inward/inward_bill_service_refund.xhtml
+++ b/src/main/webapp/inward/inward_bill_service_refund.xhtml
@@ -98,7 +98,7 @@
                                             <p:printer target="gpBillPreview" ></p:printer>
                                         </p:commandButton>
 
-                                        <h:panelGroup id="gpBillPreview" rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}">
+                                        <h:panelGroup id="gpBillPreview" rendered="#{sessionController.currentPreference.printLabelForOPdBill eq false and sessionController.currentPreference.applicationInstitution eq 'Ruhuna'}">
                                             <bi:inwardBillPrintPos bill="#{billSearch.bill}" duplicate="false" refunded="true"/>
                                         </h:panelGroup>
 
