--- a/src/main/webapp/inward/inward_reprint_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_service.xhtml
@@ -139,7 +139,7 @@
                         <p:panel id="gpBillPreview" >
 
 
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}">
+                            <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq false and sessionController.currentPreference.applicationInstitution eq 'Ruhuna'}">
                                 <ui:repeat value="#{inwardSearch.bill}" var="bill">
                                     <bill:inwardBillPrintPos bill="#{bill}" duplicate="false"/>
                                 </ui:repeat>
@@ -147,20 +147,20 @@
 
                             
 
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false and sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq false and sessionController.currentPreference.applicationInstitution ne 'Ruhuna'}">
                                 <ui:repeat value="#{inwardSearch.bill}" var="bill">
                                     <bill:inwardBillPrintRuhunu bill="#{bill}" dup="false"/>
                                 </ui:repeat>
                             </h:panelGroup>
 
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq true}">
+                            <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq true}">
                                 <ui:repeat value="#{inwardSearch.bill}" var="b">
                                     <bill:inwardBillPrintFiveFive bill="#{b}" dup="false"/>                        
                                 </ui:repeat>  
                             </h:panelGroup>
                         </p:panel>
                         <p:panel id="gpBillPreview2">
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'}">
+                            <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq false and sessionController.currentPreference.applicationInstitution eq 'Ruhuna'}">
                                 <ui:repeat value="#{inwardSearch.bill.refundBills}" var="bill" rendered="#{!inwardSearch.bill.cancelled}">
                                     <bill:inwardBillPrintPos bill="#{bill}" duplicate="false"/>
                                 </ui:repeat>
