--- a/src/main/webapp/inward/inward_room.xhtml
+++ b/src/main/webapp/inward/inward_room.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="content">
         <h:panelGroup >
             <h:form  >
-                <p:growl />
+                <p:growl autoUpdate="true" />
                 <p:focus id="selectFocus" context="gpSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
 
