--- a/src/main/webapp/inward/inward_room_facility.xhtml
+++ b/src/main/webapp/inward/inward_room_facility.xhtml
@@ -15,7 +15,7 @@
                     <p:graphicImage library="image" name="back.jpg" styleClass="backButton"></p:graphicImage>
                 </h:commandLink>
                 
-                <p:growl />
+                <p:growl autoUpdate="true" />
                 <p:focus id="selectFocus" context="gpSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
 
@@ -83,12 +83,12 @@
                                     <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.maintananceCharge}"/>
                                     <h:outputLabel value="Nursing Charge"/>
                                     <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.nursingCharge}"/>
-                                    <h:outputLabel value="Duration Days For Mo Charge" rendered="#{sessionController.loggedPreference.inwardMoChargeCalculateInitialTime}"/>
-                                    <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.timedItemFee.durationDaysForMoCharge}" rendered="#{sessionController.loggedPreference.inwardMoChargeCalculateInitialTime}"/>
+                                    <h:outputLabel value="Duration Days For Mo Charge" rendered="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
+                                    <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.timedItemFee.durationDaysForMoCharge}" rendered="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
                                     <h:outputLabel value="MO Charge" />
                                     <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.moCharge}"/>
-                                    <h:outputLabel value="Charge for After Duration Days" rendered="#{sessionController.loggedPreference.inwardMoChargeCalculateInitialTime}"/>
-                                    <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.moChargeForAfterDuration}" rendered="#{sessionController.loggedPreference.inwardMoChargeCalculateInitialTime}"/>
+                                    <h:outputLabel value="Charge for After Duration Days" rendered="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
+                                    <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.moChargeForAfterDuration}" rendered="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
                                     <h:outputLabel value="Linen Charge Per Day" />
                                     <h:inputText autocomplete="off" value="#{roomFacilityChargeController.current.linenCharge}"/>
 
