--- a/src/main/webapp/inward/inward_timed_item.xhtml
+++ b/src/main/webapp/inward/inward_timed_item.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <h:panelGroup >
             <h:form id="form"  >
-                <p:growl />
+                <p:growl autoUpdate="true" />
                 <p:panel header="Manage Timed Item" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
                         <h:panelGrid id="gpSelect" columns="1"  >
