--- a/src/main/webapp/inward/inward_timed_item_inward_only.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_inward_only.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <h:panelGroup >
             <h:form id="form"  >
-                <p:growl id="msg"  />
+                <p:growl id="msg" autoUpdate="true" />
                 <p:panel header="Manage Timed Item (Theatre Only)" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
                         <h:panelGrid id="gpSelect" columns="1"  >
