--- a/src/main/webapp/inward/pharmacy_bill_return_bht_issue.xhtml
+++ b/src/main/webapp/inward/pharmacy_bill_return_bht_issue.xhtml
@@ -83,28 +83,28 @@
                 <h:panelGroup   id="gpBillPreview1"   >
 
 
-                    <h:panelGroup   id="gpBillPreviewSingle" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'PosPaper'}">
+                    <h:panelGroup   id="gpBillPreviewSingle" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'PosPaper'}">
 
-                        <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq false}" > 
+                        <h:panelGroup rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq false}" > 
                             <phi:returnBill bill="#{bhtIssueReturnController.returnBill}"/>
                         </h:panelGroup>
 
                     </h:panelGroup>
 
-                    <h:panelGroup id="gpBillPreviewDouble" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'PosPaper'}"> 
+                    <h:panelGroup id="gpBillPreviewDouble" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'PosPaper'}"> 
 
                         <div >
-                            <h:panelGroup     rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq true}"> 
+                            <h:panelGroup     rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq true}"> 
                                 <phi:saleBill_prabodha bill="#{bhtIssueReturnController.returnBill}"></phi:saleBill_prabodha>
                             </h:panelGroup>
                         </div>
 
                     </h:panelGroup>
 
-                    <h:panelGroup id="gpBillPreviewFiveFive" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
+                    <h:panelGroup id="gpBillPreviewFiveFive" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
 
                         <div >
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq false}" > 
+                            <h:panelGroup rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq false}" > 
                                 <phi:saleBill_five_five bill="#{bhtIssueReturnController.returnBill}"></phi:saleBill_five_five>
                             </h:panelGroup>
                         </div>
@@ -117,30 +117,30 @@
                 <p:panel   id="gpBillPreview2"   >
 <!--                    <ph:issueBill  bill="#{bhtIssueReturnController.bill}"/>-->
 
-                    <h:panelGroup   id="gpBillPreviewSingle2" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'PosPaper'}">
+                    <h:panelGroup   id="gpBillPreviewSingle2" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'PosPaper'}">
 
                         <div >
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq false}" > 
+                            <h:panelGroup rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq false}" > 
                                 <ph:issueBill  bill="#{bhtIssueReturnController.bill}"/>
                             </h:panelGroup>
                         </div>
 
                     </h:panelGroup>
 
-                    <h:panelGroup id="gpBillPreviewDouble2" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'PosPaper'}"> 
+                    <h:panelGroup id="gpBillPreviewDouble2" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'PosPaper'}"> 
 
                         <div >
-                            <h:panelGroup     rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq true}"> 
+                            <h:panelGroup     rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq true}"> 
                                 <phi:saleBill_prabodha bill="#{bhtIssueReturnController.bill}"></phi:saleBill_prabodha>
                             </h:panelGroup>
                         </div>
 
                     </h:panelGroup>
 
-                    <h:panelGroup id="gpBillPreviewFiveFive2" rendered="#{sessionController.loggedPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
+                    <h:panelGroup id="gpBillPreviewFiveFive2" rendered="#{sessionController.currentPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
 
                         <div >
-                            <h:panelGroup rendered="#{sessionController.loggedPreference.pharmacyBillPrabodha eq false}" > 
+                            <h:panelGroup rendered="#{sessionController.currentPreference.pharmacyBillPrabodha eq false}" > 
                                 <phi:saleBill_five_five bill="#{bhtIssueReturnController.bill}"></phi:saleBill_five_five>
                             </h:panelGroup>
                         </div>
