--- a/src/main/webapp/inward/theatre_service.xhtml
+++ b/src/main/webapp/inward/theatre_service.xhtml
@@ -12,7 +12,7 @@
 
         <h:panelGroup >
             <h:form id="form"  >
-                <p:growl />
+                <p:growl autoUpdate="true" />
 
                 <p:panel header="Manage Service" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
