Area Client List

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel >
+                    <p:panel rendered="false" >
                         <p:commandButton value="Lab Administration" action="/lab/administration" ajax="false" />
                     </p:panel>
                 </h:form>
