--- a/src/main/webapp/pharmacy/pharmacy_item_import_with_stock.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_import_with_stock.xhtml
@@ -9,11 +9,13 @@
     <ui:define name="content">
         <h:form enctype="multipart/form-data">
             <p:fileUpload value="#{pharmacyItemExcelManager.file}" mode="simple"/>
-            <p:commandButton ajax="false" value="Submit" action="#{pharmacyItemExcelManager.importToExcelWithStock}"/>
+            <p:commandButton ajax="false" value="Submit" 
+                             action="#{pharmacyItemExcelManager.importToExcelWithStock}"/>
 
             <p:panel header="Import Stock from Excel" >
                 <h:outputLabel value="Instructions" ></h:outputLabel>
                 <p:panel >
+                    <h1>Import Stock by Sale</h1>
                     <p>Please make sure the following order of Columns in the uploading Excel File.</p>
                     <p>Leave First Row for Row Headings.</p>
 
