--- a/src/main/webapp/membership/payment_scheme.xhtml
+++ b/src/main/webapp/membership/payment_scheme.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Discount Scheme" styleClass="verticalAndHorizontalCentering">
+                <p:panel header="Manage Discount Scheme" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
@@ -30,6 +30,7 @@
                                         </f:ajax>
                                     </h:selectOneListbox>
                                 </h:panelGrid>
+                                
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
 
                                     <p:commandButton ajax="false" id="btnAdd" value="Add" action="#{paymentSchemeController.prepareAdd()}" styleClass="buttons" />                                      
