--- a/src/main/webapp/pharmacy/pharmacy_item_import_barcode.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_import_barcode.xhtml
@@ -12,8 +12,11 @@
             <p>Please make sure the following order of Columns.</p>
             <p>Leave First Row for Row Headings.</p>
             <p:panelGrid columns="13" style="border: 1px solid blue;" >
-                <h:outputLabel value ="2. Product " ></h:outputLabel>
-                <h:outputLabel value ="4. Barcode" ></h:outputLabel>
+                <h:outputLabel value ="1. No " ></h:outputLabel>
+                <h:outputLabel value ="2. Category" ></h:outputLabel>
+                <h:outputLabel value ="3. Product" ></h:outputLabel>
+                <h:outputLabel value ="4. Code" ></h:outputLabel>
+                <h:outputLabel value ="5. Barcode" ></h:outputLabel>
             </p:panelGrid>
 
             <p:fileUpload value="#{pharmacyItemExcelManager.file}" mode="simple"/>
